--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
   <body>
     <!-- write the body here -->
 
+	  
+<form>
+
+	<input type="number" id="age" placeholder="Age" required>
+
+<br>
+	<br>
+	<input type="text" id="name" placeholder="Name" required>
+<br>
+<br>
+	<button type="submit" id="btn">Submit</button>
+	
+</form>
+
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
